dist/LineScript-win64-20260615/tests/cases/compile_fail/class_private_field_access.lsc
class Vault do
  private declare secret: i64 = 7
end

main() -> i64 do
  declare v: Vault = Vault()
  println(v.secret)
  return 0
end
